--- a/index.html
+++ b/index.html
@@ -122,27 +122,29 @@
         <div class="container">
           <h2 class="work-title">Чем мы занимаемся</h2>
           <ul class="work">
-            <li class="item">
+            <li class="item desktop-app">
               <img
                 class="work-img"
                 src="./css/imige/img.jpg"
                 width="370"
                 alt="руки на клавиатуре и планшета"/>
-                <p class="text">Десктопные приложения</p>             
+                <div class="position"><p class="text">Десктопные приложения</p></div>          
             </li>
-            <li class="item">
+            <li class="item mobile-app">
               <img
                 class="work-img"
                 src="./css/imige/img(1).jpg"
                 alt="женская зука на клавиатуре"/>
-                <p class="text">Мобильные приложения</p>
+                <div class="position"><p class="text">Мобильные приложения</p></div>
             </li>
-            <li class="item">
-              <img
+            <li class="item design-img">             
+                <img
                 class="work-img"
                 src="./css/imige/palitra.jpg"
-                alt="в женской руке планшет с палитрой на экране"/>
-                <p class="text">Дизайнерские решения</p>
+                alt="в женской руке планшет с палитрой на экране"/>              
+             <div class="position">
+              <p class="text">Дизайнерские решения</p>
+             </div>
             </li>
           </ul>
         </div>
