--- a/portfolio.html
+++ b/portfolio.html
@@ -79,13 +79,13 @@
           <ul class="portpholio-list">
           
             <li class="item">
-             <a href="" class="link">
+             <a href="" class="link pph-position">
               <img
               class="portpholio-img"
               src="./css/imige/potfolioimg(1).jpg"
               width="370"
               alt="профили трёх сотрудников комрании на мониторе"/>
-              <p class="img-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения  о компании или частном лице.</p>
+              <div class="position-pph"><p class="img-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить исчерпывающие сведения  о компании или частном лице.</p></div>
             <div class="img-border">
               <h2 class="title-item">Технокряк</h2>
               <p class="text">Веб-сайт</p>
@@ -99,8 +99,12 @@
               class="portpholio-img"
               src="./css/imige/potfolioimg(2).jpg"
               width="370"
-              alt="два баскетболиста с мячом"
-            />
+              alt="два баскетболиста с мячом"/>
+              <div class="position-pph">
+                <p class="img-text">
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque fuga adipisci, minus reiciendis atque doloribus eveniet explicabo laborum autem tempora, magni soluta, maiores quos? Nesciunt!
+                </p>
+              </div>
             <div class="img-border">                     
               <h2 class="title-item">Постер New Orlean vs Golden Star</h2>
               <p class="text">Дизайн</p>
@@ -113,9 +117,12 @@
                 class="portpholio-img"
                 src="./css/imige/potfolioimg(3).jpg"
                 width="370"
-                alt="рыба с надписью на ней The Seafod Restaraunt"
-              />
-
+                alt="рыба с надписью на ней The Seafod Restaraunt"/>
+                <div class="position-pph">
+                  <p class="img-text">
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque fuga adipisci, minus reiciendis atque doloribus eveniet explicabo laborum autem tempora, magni soluta, maiores quos? Nesciunt!
+                  </p>
+                </div>
               <div class="img-border">
                 <h2 class="title-item">Ресторан Seafood</h2>
                 <p class="text">Приложение</p>
@@ -128,8 +135,12 @@
                 class="portpholio-img"
                 src="./css/imige/potfolioimg(4).jpg"
                 width="370"
-                alt="наушники"
-              />
+                alt="наушники"/>
+                <div class="position-pph">
+                  <p class="img-text">
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque fuga adipisci, minus reiciendis atque doloribus eveniet explicabo laborum autem tempora, magni soluta, maiores quos? Nesciunt!
+                  </p>
+                </div>
               <div class="img-border">
                 <h2 class="title-item">Проект Prime</h2>
                 <p class="text">Маркетинг</p>
@@ -142,8 +153,12 @@
                 class="portpholio-img"
                 src="./css/imige/potfolioimg(5).jpg"
                 width="370"
-                alt="две картонные коробки"
-              />
+                alt="две картонные коробки"/>
+                <div class="position-pph">
+                  <p class="img-text">
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque fuga adipisci, minus reiciendis atque doloribus eveniet explicabo laborum autem tempora, magni soluta, maiores quos? Nesciunt!
+                  </p>
+                </div>
               <div class="img-border">
                 <h2 class="title-item">Проект Boxes</h2>
                 <p class="text">Приложение</p>
@@ -155,8 +170,12 @@
                 class="portpholio-img"
                 src="./css/imige/potfolioimg(6).jpg"
                 width="370"
-                alt="страница сайта Inspiration has no Borders"
-              />
+                alt="страница сайта Inspiration has no Borders"/>
+                <div class="position-pph">
+                  <p class="img-text">
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque fuga adipisci, minus reiciendis atque doloribus eveniet explicabo laborum autem tempora, magni soluta, maiores quos? Nesciunt!
+                  </p>
+                </div>
               <div class="img-border">
                 <h2 class="title-item">Inspiration has no Borders</h2>
                 <p class="text">Веб-сайт</p>
@@ -168,8 +187,12 @@
               class="portpholio-img"
               src="./css/imige/potfolioimg(7).jpg"
               width="370"
-              alt="раскрытая книга"
-            />
+              alt="раскрытая книга"/>
+              <div class="position-pph">
+                <p class="img-text">
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque fuga adipisci, minus reiciendis atque doloribus eveniet explicabo laborum autem tempora, magni soluta, maiores quos? Nesciunt!
+                </p>
+              </div>
             <div class="img-border">
               <h2 class="title-item">Издание Limited Edition</h2>
               <p class="text">Дизайн</p>
@@ -181,8 +204,12 @@
                 class="portpholio-img"
                 src="./css/imige/potfolioimg(8).jpg"
                 width="370"
-                alt="бейдж с надписью LAB EL TEB"
-              />
+                alt="бейдж с надписью LAB EL TEB"/>
+                <div class="position-pph">
+                  <p class="img-text">
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque fuga adipisci, minus reiciendis atque doloribus eveniet explicabo laborum autem tempora, magni soluta, maiores quos? Nesciunt!
+                  </p>
+                </div>
               <div class="img-border">
                 <h2 class="title-item">Проект LAB</h2>
                 <p class="text">Маркетинг</p>
@@ -194,8 +221,12 @@
               class="portpholio-img"
               src="./css/imige/potfolioimg(9).jpg"
               width="370"
-              alt="открытое на net book Приложение Growing Business"
-            />
+              alt="открытое на net book Приложение Growing Business"/>
+              <div class="position-pph">
+                <p class="img-text">
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eaque fuga adipisci, minus reiciendis atque doloribus eveniet explicabo laborum autem tempora, magni soluta, maiores quos? Nesciunt!
+                </p>
+              </div>
             <div class="img-border">
               <h2 class="title-item">Growing Business</h2>
               <p class="text">Приложение</p>
