--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   
           <ul class="list">
             <li class="item active" >
-              <a href="index.html" class="after-link">Студия</a></li>
+              <a href="index.html" class="link after-link">Студия</a></li>
             <li class="item">
               <a href="portfolio.html" class="link">Портфолио</a>
             </li>
