--- a/index.html
+++ b/index.html
@@ -60,9 +60,13 @@
           Эффективные решения
           для вашего бизнеса
         </h1>
-        <button type="button" class="button">Заказать услугу</button>
+        <button type="button" class="button" data-modal-open>Заказать услугу</button>
+        <div class="backdrop is-hidden" data-modal>
+          <div class="modal" >
+             <button  class="modal-button" data-modal-close>закрыть</button>
+          </div>
+        </div>
       </section>
-
       <section class="peculiarties">
         <div class="container">
           <h2 class="title-peculiarties">Особенности</h2>
