--- a/index.html
+++ b/index.html
@@ -442,34 +442,31 @@
            <!-- <svg>
              <use shref="./css/imige/icon-form.svg#close-black"></use>
            </svg> -->
-         </button>
-         <!-- <form>
-          <p class="title-modal">Оставьте свои данные, мы вам перезвоним</p>
-           <lable class="modal item">
-             <span class="name-input">имя</span>
-             <input type="name" class="modal input">
+          </button>
+          <!-- <form>
+            <p class="title-modal">Оставьте свои данные, мы вам перезвоним</p>
+            <lable class="modal item">
+              <span class="name-input">имя</span>
+              <input type="name" name="name" class="modal input">
+             </lable>
+            
+            <lable class="modal item">
+              <span>почта</span>
+              <input type="email" name="email" class="modal input">
             </lable>
-           <lable class="modal item">
-             <span>телефон</span>
-             <input type="tel" class="modal input">
-           </lable>
-           <lable class="modal item">
-             <span>почта</span>
-             <input type="email" class="modal input">
-           </lable>
-           <lable>
-             <span>коментарий</span>
-            <textarea name="coment" id="coment"    rows="10" class="coment"></textarea>
-           </lable>
-           <label>
-             <input type="checbox">
-             <p>Соглашаюсь с рассылкой и принимаю <span><a href="">Условия договора</a></span></p>
-           </label>
-           <button class="button-send" type="submit">
-             Отправить
-           </button>
-          </form> -->
-      </div>
+            <lable>
+              <span>коментарий</span>
+             <textarea name="coment" id="coment"    rows="10" class="coment"></textarea>
+            </lable>
+            <label>
+              <input type="checbox" /> 
+              <p>Соглашаюсь с рассылкой и принимаю <span><a href="">Условия договора</a></span></p>
+            </label>
+            <button class="button-send" type="submit">
+              Отправить
+            </button>
+          </form>
+      </div> -->
     </div>
     <script src="./js/modal.js"> </script>
   </body>
