--- a/index.html
+++ b/index.html
@@ -421,14 +421,16 @@
         </section>
         <section class="footer-form">
           <form class="form">          
+            <span>
               <p class="form-text">Подпишитесь на рассылку</p>
               <label class="footer-form-mail">
-                <input class="input-mail" type="email" name="E-mail"/>
+                <input class="input-mail" type="email" name="E-mail" placeholder="E-mail"/>
               </label> 
+            </span>
                        
             <button type="submit" class="button-form">Подписаться
               <svg class="form-icon">
-                <use shref="./css/imige/icon-form.svg#telegram" ></use>
+                <use href="./css/imige/icon-form.svg#telegram" ></use>
               </svg>
             </button>
           </form>
@@ -445,7 +447,7 @@
           </button>
           <!-- <form>
             <p class="title-modal">Оставьте свои данные, мы вам перезвоним</p>
-            <lable class="modal item">
+            <lable class="modal-item">
               <span class="name-input">имя</span>
               <input type="name" name="name" class="modal input">
              </lable>
@@ -459,14 +461,14 @@
              <textarea name="coment" id="coment"    rows="10" class="coment"></textarea>
             </lable>
             <label>
-              <input type="checbox" /> 
+           <input type="checbox" /> 
               <p>Соглашаюсь с рассылкой и принимаю <span><a href="">Условия договора</a></span></p>
             </label>
             <button class="button-send" type="submit">
               Отправить
             </button>
-          </form>
-      </div> -->
+          </form> -->
+      </div>   
     </div>
     <script src="./js/modal.js"> </script>
   </body>
